[gd_scene load_steps=2 format=3 uid="uid://btnoeuwj3cq5j"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_yijf7"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yijf7")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.5
offset_right = 24.5
offset_bottom = 121.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 86
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GameOver" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 1020.0
offset_bottom = 599.0

[node name="GameOverLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.391486
anchor_right = 0.5
anchor_bottom = 0.391486
offset_left = -138.0
offset_top = -36.5
offset_right = 138.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "Game Over"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -12.5
offset_right = 58.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08, 1.08)
theme_override_font_sizes/font_size = 24
text = "Retry?"

[node name="StartGame" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 1022.0
offset_bottom = 600.0

[node name="TitleLabel" type="Label" parent="StartGame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.415833
anchor_right = 0.5
anchor_bottom = 0.415833
offset_left = -116.0
offset_top = -36.5
offset_right = 116.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "Flapi Bird
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartGameButton" type="Button" parent="StartGame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.458
anchor_top = 0.53
anchor_right = 0.549
anchor_bottom = 0.544
offset_left = -22.4999
offset_top = -15.5
offset_right = 22.4999
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"
metadata/_edit_use_anchors_ = true
